--- a/.gitignore
+++ b/.gitignore
@@ -109,12 +109,12 @@ ENV/
 ### PyCharm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-Circle-Map.iml
+src/Circle-Map.iml
 misc.xml
 modules.xml
 # User-specific stuff
-.idea/**/workspace.xml
-.idea/**/tasks.xml
+src/.idea/**/workspace.xml
+src/.idea/**/tasks.xml
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
