--- a/.gitignore
+++ b/.gitignore
@@ -110,7 +110,7 @@ ENV/
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 src/Circle-Map.iml
-misc.xml
+src/misc.xml
 modules.xml
 # User-specific stuff
 src/.idea/**/workspace.xml
@@ -202,3 +202,5 @@ tutorial/*bed
 tutorial/*sam
 tutorial/*sam
 tutorial/*bai
+.idea
+src/.idea
